<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@mipmap/add"
        android:title="@string/menu_add"

        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_total"
        android:icon="@mipmap/statics"
        android:title="@string/menu_statics"
        app:showAsAction="ifRoom" />
    <!--
    <item
        android:id="@+id/action_oil"
        android:title="油价"
        app:showAsAction="withText" /> -->
    <item
        android:id="@+id/action_import"
        android:title="@string/menu_import"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_export"
        android:title="@string/menu_export"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="withText" />
</menu>
